syntax = "proto3";

package protocol;

service Runner {
  rpc TestConnection (TestConnectionRequest) returns (TestConnectionResponse) {
  }

  rpc DeployApplication (DeployApplicationRequest) returns (DeployApplicationResponse) {
  }

  rpc DeleteApplication (DeleteApplicationRequest) returns (DeleteApplicationResponse) {
  }

  rpc GetApplicationLogs (GetApplicationLogsRequest) returns (stream GetApplicationLogsResponse) {
  }
}

message TestConnectionRequest {
  string token = 1;
}

message TestConnectionResponse {
  bool ok = 1;
}

enum ApplicationState {
  UNKNOWN = 0;
  STOPPED = 1;
  STARTING = 2;
  RUNNING = 3;
}

message Application {
  string id = 1;
  string name = 2;
  string image = 3;
  uint32 replicas = 4;
  map<string, string> environment = 5;
}

message DeployApplicationRequest {
  Application application = 1;
}

message DeployApplicationResponse {
}

message DeleteApplicationRequest {
  string id = 1;
}

message DeleteApplicationResponse {
}

message GetApplicationLogsRequest {
  string id = 1;
}

message GetApplicationLogsResponse {
  enum Output {
    STDOUT = 0;
    STDERR = 1;
  }

  Output output = 1;
  string time = 2;
  string taskId = 3;
  string message = 4;
}
